# ann

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  ann.py  docker-compose.yml  headlines-2026-07-02.md  headlines20260701.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  daily-digest.yml
ann_app/: cache.py  config.py  fetch.py  filter.py  parse.py  providers.py  render.py  resolve.py  retrospective.py
docs/: ARCHITECTURE.md  CONTINUITY.md  DEVELOPMENT.md  DEVOPS.md  NEXT_SESSION_PROMPT.md
memory/: ann_status.md
tests/: test_cache.py  test_config.py  test_fetch.py  test_filter.py  test_parse.py  test_providers.py  test_render.py  test_resolve.py  test_retrospective.py  test_run.py  test_security.py
