[project]
name = "ann"
version = "0.2.0"
description = "All the News You Need — a tiny daily news digest of what will still matter in 30 days."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "William C. Brown" }]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "__pycache__", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
